hw-5/simple-app-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: simple-app-auth
  annotations:
    nginx.ingress.kubernetes.io/auth-url: "http://auth-app-auth-app-chart.myapp.svc.cluster.local:8000/auth"
    nginx.ingress.kubernetes.io/auth-signin: "http://$host/signin"
    nginx.ingress.kubernetes.io/auth-response-headers: "X-Phone,X-User-Id,X-First-Name,X-Last-Name"
spec:
  rules:
    - host: arch.homework
      http:
        paths:
          - backend:
              serviceName: simple-app-simple-app-chart
              servicePort: 8000
            path: /users/profile
